# booking_khlug

./: .gitignore  Cargo.toml  README.md
common/src/: lib.rs
kiosk/: Cargo.toml  README.md  build.sh  deploy.sh
kiosk/frontend/: package-lock.json  package.json
kiosk/frontend/src/: App.svelte  app.css
kiosk/frontend/src/lib/: CameraView.svelte
kiosk/src/: main.rs  ws.rs
scanner/: Cargo.toml  README.md
scanner/src/: decoder.rs  error.rs  lib.rs
server/: .gitignore  README.md  app.py  build.sh  init_db.py  requirements-dev.txt  requirements.txt
server/frontend/: index.html  package.json  vite.config.ts
server/frontend/src/: App.svelte
server/frontend/src/pages/: BookDetailPage.svelte  BookListPage.svelte
server/spec/: openapi.yaml  schema.sql
shared/: README.md  package.json
shared/components/: BookCard.svelte  BookList.svelte  QRCode.svelte  index.ts
