[package]
name = "kiosk"
version = "0.1.0"
edition = "2021"

[dependencies]
scanner = { path = "../scanner" }

poem = { version = "3", features = ["websocket", "static-files"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
